showing errors easely
